add change buttons functions

--- a/index.html
+++ b/index.html
@@ -983,6 +983,10 @@
                 <span class="line-circle"></span>
             </div>
         </div>
+        <button class="gallery-slider-mobile gallery-slider-mobile--prev"><img
+                src="./img/icons/header-slider-mobile-prev.svg" width="35" height="35" alt="prev"></button>
+        <button class="gallery-slider-mobile gallery-slider-mobile--next"><img
+                src="./img/icons/header-slider-mobile-next.svg" width="35" height="35" alt="next"></button>
         <div class="slider-wrap gallery__slider">
             <img src="./img/photo/gallery-slider-1.png" alt="slider" class="gallery-slider-item js-slider-item-gallery">
             <img src="./img/photo/gallery-slider-2.png" alt="slider" class="gallery-slider-item js-slider-item-gallery">
@@ -997,16 +1001,7 @@
             <div class="slider-nav">
                 <div class="slider-line">
                     <ul class="slider-line__list js-slider-line-gallery">
-                        <!-- <li class="slider-line-point"></li>
-                        <li class="slider-line-point"></li>
-                        <li class="slider-line-point"></li>
-                        <li class="slider-line-point"></li>
-                        <li class="slider-line-point"></li>
-                        <li class="slider-line-point"></li>
-                        <li class="slider-line-point"></li>
-                        <li class="slider-line-point"></li>
-                        <li class="slider-line-point"></li>
-                        <li class="slider-line-point"></li> -->
+
                     </ul>
                 </div>
                 <div class="btn-wrap">
@@ -1035,6 +1030,10 @@
                 </div>
             </div>
             <div class="feedback-slider">
+                <button class="feedback-slider-mobile feedback-slider-mobile--prev"><img
+                        src="./img/icons/header-slider-mobile-prev.svg" width="35" height="35" alt="prev"></button>
+                <button class="feedback-slider-mobile feedback-slider-mobile--next"><img
+                        src="./img/icons/header-slider-mobile-next.svg" width="35" height="35" alt="next"></button>
                 <div class="feedback-slider__nav">
                     <div class="feedback-slider__list">
                     </div>
@@ -1051,6 +1050,8 @@
                     <img src="./img/icons/“.svg" alt="''">
                 </div>
                 <div class="feedback-slider__inner">
+
+
                     <div class="feedback-item">
                         <div class="feedback-item__inner">
                             <div class="feedback-item__img">
