--- a/assistant.html
+++ b/assistant.html
@@ -378,104 +378,22 @@
     <section class="about">
         <div class="container">
             <div class="about__wrap">
-
-
                 <div class="about-text">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum dignissimos blanditiis qui numquam
-                    quis unde! Adipisci possimus labore impedit iusto quaerat ex quos obcaecati ducimus, maiores
-                    sapiente necessitatibus, amet soluta.
-                    Ab eligendi error corrupti cum, eius consequuntur minus excepturi laudantium doloremque impedit
-                    omnis rerum at optio molestias enim. Labore dolore quod repudiandae, nobis expedita voluptatum
-                    cupiditate in magni ex ratione!
-                    Vitae commodi accusamus, quos, ullam quo obcaecati veniam adipisci minima itaque, tempore
-                    voluptatem. Assumenda placeat neque voluptatibus esse, quisquam sed dolorem blanditiis ullam unde
-                    fuga est quo laborum quaerat eos.
-                    Asperiores assumenda sequi in, libero perferendis aliquam eius quis suscipit ad, inventore, minima
-                    natus! Laboriosam accusantium nostrum sint voluptatem doloremque consectetur fugiat laborum
-                    exercitationem nisi veniam ratione, blanditiis, neque tenetur?
-                    Illo alias possimus commodi cupiditate velit debitis laboriosam culpa nisi vel facilis aliquam ex
-                    recusandae animi perferendis blanditiis saepe molestias, officiis aspernatur dicta eaque repellat
-                    quidem soluta eius. At, distinctio?
-                    Vel, expedita tempore. Provident pariatur illo enim assumenda corrupti optio nemo quisquam eveniet
-                    hic quos, incidunt quaerat deserunt excepturi, nam fugiat! Harum porro, dolores rem libero
-                    doloremque ipsum id illo.
-                    Fugiat nam magnam ratione delectus numquam! Voluptates perferendis hic delectus ea dignissimos quod
-                    quia aliquid nihil fuga ab fugiat minus reprehenderit iusto quas ipsa, excepturi sit minima dolorem
-                    impedit odio!
-                    Qui ea ipsum tenetur ducimus officiis, labore in culpa laboriosam dicta, alias veniam delectus natus
-                    odio quam odit, ab ratione commodi. Tempora dignissimos ab suscipit quisquam possimus. Eius, ratione
-                    hic!
-                    Ullam quidem consequatur ducimus saepe nobis repudiandae officiis quisquam dolorem vitae incidunt
-                    minus libero, nulla quia necessitatibus suscipit ipsa obcaecati hic soluta repellendus eligendi sint
-                    ipsam deserunt quis consequuntur. Consectetur.
-                    Quaerat, dolorem culpa! Ipsa qui, necessitatibus velit consequuntur voluptatibus fuga est, esse
-                    facilis quos ducimus nulla vero quia dicta iure ab quam. Obcaecati non pariatur temporibus tenetur
-                    impedit blanditiis modi.
-                    Aliquid dolorem quisquam laudantium explicabo! Similique unde dolorum non incidunt optio nulla
-                    illum, iusto velit excepturi quisquam in laudantium nisi molestias, consectetur veritatis. Magni
-                    officiis ducimus maxime tenetur consequuntur quae.
-                    Voluptates, itaque commodi quisquam aspernatur assumenda delectus sed ipsam ad architecto nisi odio
-                    vitae eum recusandae adipisci dicta accusamus deserunt possimus suscipit magnam quo? Non nobis earum
-                    id facilis in?
-                    Omnis illum explicabo impedit voluptates modi, sint asperiores vitae repellat sit iste pariatur
-                    debitis eius recusandae unde voluptate tempora alias ex ad facilis velit tempore delectus adipisci
-                    ut? Sit, modi.
-                    Sed, quisquam modi eaque tempore vitae repellat obcaecati. Sit iure reiciendis corporis natus magni
-                    fuga maxime quisquam rem sed optio odio temporibus perferendis dolore, esse quo quas deleniti vero
-                    nesciunt!
-                    Deserunt unde eius nostrum quis placeat accusantium voluptatibus nulla dignissimos assumenda cum,
-                    suscipit accusamus deleniti, totam magnam dicta sed minus aliquam illo excepturi. Laudantium aperiam
-                    fuga accusantium explicabo quia culpa!
-                    Numquam repellendus voluptatibus dignissimos fugit totam nesciunt maiores, veritatis in voluptates
-                    harum nobis repellat iure minus consequatur earum saepe sequi eum, minima vitae doloribus aliquam
-                    sed animi repudiandae. Odio, nobis?
-                    Atque veritatis, vero nisi minus quos necessitatibus dolore saepe quas quisquam molestias, dolorem
-                    rem debitis voluptates? Dolor corporis, quaerat blanditiis ducimus doloribus similique id hic. Sit
-                    quas quae quis distinctio?
-                    Est, consequatur. Voluptatibus earum autem laudantium totam, expedita asperiores eaque aspernatur
-                    dolorum nemo eveniet dolore ad amet, veniam provident debitis nisi, vitae ut fugiat natus? Illo
-                    illum ipsa culpa sunt.
-                    Beatae esse libero fugiat recusandae iste iusto eligendi! Reiciendis repellat, officiis laboriosam
-                    aspernatur quis eos cumque? Deserunt aliquid eius, magnam autem hic nobis. Laborum perferendis earum
-                    ut rerum numquam provident?
-                    Id consequuntur est quibusdam quidem quisquam itaque deserunt iste, nisi similique aliquid culpa qui
-                    at, magni assumenda in iusto vel sit, dolorem laborum saepe veniam adipisci eum animi. Sit, beatae!
-                    Mollitia perspiciatis corrupti iste culpa tenetur laudantium consequuntur accusantium cupiditate
-                    quisquam illum modi nisi id nesciunt iusto, impedit reiciendis voluptas, aspernatur animi qui sequi
-                    a obcaecati aliquid! Molestias, nisi eligendi.
-                    Possimus maiores nisi, totam eaque dignissimos minus non cupiditate, veritatis nam obcaecati sit eos
-                    magnam a in consectetur molestiae voluptatum hic molestias, amet quod. Nam obcaecati ex natus
-                    ratione reprehenderit.
-                    Recusandae tempore quis beatae! Fuga fugiat magnam error ex velit unde tenetur, magni ab et
-                    voluptatem harum id consequuntur aspernatur consequatur nihil accusamus. Minima deserunt eius
-                    architecto asperiores incidunt tempora.
-                    Dolores nulla mollitia ipsa velit enim saepe, quo hic praesentium nobis id excepturi quaerat
-                    exercitationem aut dignissimos. Hic minima, recusandae id, ea mollitia, explicabo vel pariatur
-                    doloribus quibusdam a voluptatem.
-                    Tempore debitis nemo soluta cupiditate blanditiis ea perspiciatis modi sapiente, non beatae
-                    repellendus impedit nesciunt esse ut reiciendis sequi officia mollitia et laudantium ad laboriosam
-                    facere alias expedita! Nisi, magnam?
-                    Nulla est aut quisquam sequi delectus atque sapiente repudiandae asperiores ut animi cumque itaque
-                    ex dicta autem accusantium odit alias odio perspiciatis tempora quibusdam, qui officiis quae harum
-                    voluptas. Voluptatibus.
-                    Ratione magni asperiores omnis alias, obcaecati modi vel iusto, quo numquam velit sit distinctio
-                    itaque cupiditate! Dolor, quidem aliquid inventore totam velit vero at? Nobis laboriosam sed
-                    accusantium eos ducimus!
-                    Exercitationem impedit eos delectus reiciendis mollitia aspernatur laudantium architecto omnis
-                    molestiae recusandae fuga sapiente debitis amet perspiciatis maxime consequatur ipsum eaque, aliquam
-                    odit asperiores! Fugiat repellendus repellat itaque numquam blanditiis!
-                    Aliquam aspernatur, libero natus nulla rem illum est ad unde, impedit repudiandae magnam corrupti.
-                    Minima id optio minus delectus aperiam quasi quam tenetur quibusdam perspiciatis excepturi,
-                    repellendus nam rerum quo?
-                    Nihil tempora animi quasi nobis placeat harum, provident adipisci rem, ad omnis consectetur fugiat
-                    eius illo! Amet sint iusto laudantium architecto perferendis illum? Molestiae quae quas quasi
-                    doloremque atque natus.
-                    Suscipit obcaecati veniam cupiditate ea, reiciendis pariatur ipsam adipisci sapiente molestias eum
-                    sed commodi nam, aliquid id assumenda quibusdam neque quis? Maxime, ipsam velit illo repudiandae
-                    laboriosam voluptatem quis est!
-                    Aperiam deleniti quaerat et qui placeat inventore libero atque. Nostrum voluptas ad quasi laudantium
-                    obcaecati vel voluptatibus omnis beatae natus. Fugit aliquam debitis, facilis hic optio ea iste!
-                    Cupiditate, ratione.
+                    <p class="paragraph">
+                        <span class="decor-text-blue">Edugain Overseas</span>
+                        provides services to foreign students and makes education abroad accessible and easy to them.
+                    </p>
+                    <p class="paragraph">
+                        <span class="decor-text-blue">Edugain Overseas</span>
+                        specializes in full assistance to ambitious foreign students who want to study in Ukraine and
+                        Russia.
+                    </p>
+                    <h3 class="about-header">
+
+                        WE HELP STUDENTS NOT ONLY DURING ADMISSION AND OBTAINING VISA PERIODS, BUT WE ASSIST STUDENTS
+                        DURING THEIR WHOLE PERIOD OF STUDY.
+                    </h3>
+
                     Harum molestiae dicta, provident, velit similique cumque, ut quod impedit labore suscipit
                     praesentium. Doloribus corporis asperiores quas aspernatur beatae consectetur totam deleniti labore
                     placeat. Quisquam dolor obcaecati doloremque perspiciatis laborum?
@@ -552,30 +470,76 @@
         <div class="container">
             <div class="check-universe__wrap">
                 <div class="check-universe__buttons">
-                    <button class="check-universe__btn">Russia</button>
-                    <button class="check-universe__btn check-universe__btn--active">Ukraine</button>
-                    <button class="check-universe__btn">admission</button>
+                    <button class="check-universe__btn" data-id="top">Russia</button>
+                    <button class="check-universe__btn check-universe__btn--active" data-id="middle">Ukraine</button>
+                    <button class="check-universe__btn" data-id="bottom">admission</button>
                 </div>
                 <div class="check-universe__list">
-                    <div class="universe-item">
-                        <h3 class="universe-item__title">about ukraine</h3>
-                        <hr class="universe-item__line">
-                        <p class="universe-item__text">Learn more about this mesmerizing region</p>
+                    <div class="universe-items universe-items--ukraine">
+                        <div class="universe-item">
+                            <h3 class="universe-item__title">about ukraine</h3>
+                            <hr class="universe-item__line">
+                            <p class="universe-item__text">Learn more about this mesmerizing region</p>
+                        </div>
+                        <div class="universe-item">
+                            <h3 class="universe-item__title">about ukraine</h3>
+                            <hr class="universe-item__line">
+                            <p class="universe-item__text">Learn more about this mesmerizing region</p>
+                        </div>
+                        <div class="universe-item">
+                            <h3 class="universe-item__title">about ukraine</h3>
+                            <hr class="universe-item__line">
+                            <p class="universe-item__text">Learn more about this mesmerizing region</p>
+                        </div>
+                        <div class="universe-item">
+                            <h3 class="universe-item__title">about ukraine</h3>
+                            <hr class="universe-item__line">
+                            <p class="universe-item__text">Learn more about this mesmerizing region</p>
+                        </div>
                     </div>
-                    <div class="universe-item">
-                        <h3 class="universe-item__title">about ukraine</h3>
-                        <hr class="universe-item__line">
-                        <p class="universe-item__text">Learn more about this mesmerizing region</p>
+                    <div class="universe-items universe-items--russia">
+                        <div class="universe-item">
+                            <h3 class="universe-item__title">about russia</h3>
+                            <hr class="universe-item__line">
+                            <p class="universe-item__text">Learn more about this mesmerizing region</p>
+                        </div>
+                        <div class="universe-item">
+                            <h3 class="universe-item__title">about russia</h3>
+                            <hr class="universe-item__line">
+                            <p class="universe-item__text">Learn more about this mesmerizing region</p>
+                        </div>
+                        <div class="universe-item">
+                            <h3 class="universe-item__title">about russia</h3>
+                            <hr class="universe-item__line">
+                            <p class="universe-item__text">Learn more about this mesmerizing region</p>
+                        </div>
+                        <div class="universe-item">
+                            <h3 class="universe-item__title">about russia</h3>
+                            <hr class="universe-item__line">
+                            <p class="universe-item__text">Learn more about this mesmerizing region</p>
+                        </div>
                     </div>
-                    <div class="universe-item">
-                        <h3 class="universe-item__title">about ukraine</h3>
-                        <hr class="universe-item__line">
-                        <p class="universe-item__text">Learn more about this mesmerizing region</p>
-                    </div>
-                    <div class="universe-item">
-                        <h3 class="universe-item__title">about ukraine</h3>
-                        <hr class="universe-item__line">
-                        <p class="universe-item__text">Learn more about this mesmerizing region</p>
+                    <div class="universe-items universe-items--admition">
+                        <div class="universe-item">
+                            <h3 class="universe-item__title">about admition</h3>
+                            <hr class="universe-item__line">
+                            <p class="universe-item__text">Learn more about this mesmerizing region</p>
+                        </div>
+                        <div class="universe-item">
+                            <h3 class="universe-item__title">about admition</h3>
+                            <hr class="universe-item__line">
+                            <p class="universe-item__text">Learn more about this mesmerizing region</p>
+                        </div>
+                        <div class="universe-item">
+                            <h3 class="universe-item__title">about admition</h3>
+                            <hr class="universe-item__line">
+                            <p class="universe-item__text">Learn more about this mesmerizing region</p>
+                        </div>
+                        <div class="universe-item">
+                            <h3 class="universe-item__title">about admition</h3>
+                            <hr class="universe-item__line">
+                            <p class="universe-item__text">Learn more about this mesmerizing region</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -768,6 +732,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="./js/formStiky.js"></script>
+    <script src="./js/checkUniverse.js"></script>
 </body>
 
 </html>
