add commenst lines

--- a/assistant.html
+++ b/assistant.html
@@ -550,7 +550,7 @@
         <div class="container">
             <div class="comment__wrap">
                 <div class="comments">
-                    <div class="comment-item">
+                    <div class="comment-item comment-item--question">
                         <div class="comment-item__title">
                             <h3 class="comment-item__title-wrap">Danos Papapostolou</h3>
                             <hr class="comment-item__line">
@@ -567,7 +567,7 @@
                             icine in RussiaInterested in studying medicine in RussiaInterested
                         </p>
 
-                        <button class="btn comment-item__btn">Reply</button>
+                        <a href="#" class="btn comment-item__btn">Reply</a>
                     </div>
                     <div class="comment-item comment-item--response">
                         <div class="comment-item__title">
@@ -587,9 +587,9 @@
                             icine in RussiaInterested in studying medicine in RussiaInterested
                         </p>
 
-                        <button class="btn comment-item__btn">Reply</button>
+                        <a href="#" class="btn comment-item__btn">Reply</a>
                     </div>
-                    <div class="comment-item">
+                    <div class="comment-item comment-item--question">
                         <div class="comment-item__title">
                             <h3 class="comment-item__title-wrap">Danos Papapostolou</h3>
                             <hr class="comment-item__line">
@@ -605,9 +605,30 @@
                             medicine in RussiaInterested in studying medicine in RussiaInterested ggjkhkcs
                             icine in RussiaInterested in studying medicine in RussiaInterested
                         </p>
-                        <button class="btn comment-item__btn">Reply</button>
+
+                        <a href="#" class="btn comment-item__btn">Reply</a>
                     </div>
-                    <div class="comment-item">
+                    <div class="comment-item comment-item--response">
+                        <div class="comment-item__title">
+
+                            <h3 class="comment-item__title-wrap">Danos Papapostolou</h3>
+                            <hr class="comment-item__line">
+                        </div>
+                        <div class="comment-item__date">
+                            Май 25, 2018 в 6:28 пп
+                        </div>
+                        <p class="comment-item__text">
+                            Interested in studying medicine in Russia Interested in studying medicine in Russia
+                            Interested
+                            in
+                            studying
+                            medicine in RussiaInterested in studying medicine in RussiaInterested ggjkhkcs
+                            icine in RussiaInterested in studying medicine in RussiaInterested
+                        </p>
+
+                        <a href="#" class="btn comment-item__btn">Reply</a>
+                    </div>
+                    <div class="comment-item comment-item--question">
                         <div class="comment-item__title">
                             <h3 class="comment-item__title-wrap">Danos Papapostolou</h3>
                             <hr class="comment-item__line">
@@ -623,10 +644,12 @@
                             medicine in RussiaInterested in studying medicine in RussiaInterested ggjkhkcs
                             icine in RussiaInterested in studying medicine in RussiaInterested
                         </p>
-                        <button class="btn comment-item__btn">Reply</button>
+
+                        <a href="#" class="btn comment-item__btn">Reply</a>
                     </div>
-                    <div class="comment-item">
+                    <div class="comment-item comment-item--response">
                         <div class="comment-item__title">
+
                             <h3 class="comment-item__title-wrap">Danos Papapostolou</h3>
                             <hr class="comment-item__line">
                         </div>
@@ -641,7 +664,8 @@
                             medicine in RussiaInterested in studying medicine in RussiaInterested ggjkhkcs
                             icine in RussiaInterested in studying medicine in RussiaInterested
                         </p>
-                        <button class="btn comment-item__btn">Reply</button>
+
+                        <a href="#" class="btn comment-item__btn">Reply</a>
                     </div>
                 </div>
                 <div class="commetns-form">
