add decorate blocks to page

--- a/index.html
+++ b/index.html
@@ -530,7 +530,6 @@
                                 alt="" width="35" height="35"></button>
                         <button class="slider-header-btn js-header-slide-next"><img src="./img/icons/next-btn.svg"
                                 alt="" width="35" height="35"></button>
-
                     </div>
                 </nav>
             </div>
@@ -798,8 +797,12 @@
                 </div>
             </div>
             <div class="universities-navigations">
-                <button class="btn btn--university btn--university-top-universities">TOP UNIVERSITiES</button>
-                <button class="btn btn--university btn--university-universities-russia btn--posive ">RUSSIA </button>
+                <button
+                    class="btn btn--university btn--university-top-universities btn--posive js-all-universes btn--university-active">TOP
+                    UNIVERSITiES</button>
+                <button
+                    class="btn btn--university btn--university-universities-russia btn--posive js-rus-universes">RUSSIA
+                </button>
                 <button
                     class="btn btn--university btn--university-universities-ukraine btn--posive js-ua-universes">UKRAINE</button>
                 <button class="btn btn--university btn--university-universities-more btn--posive">LEARN MORE</button>
