--- a/assistant.html
+++ b/assistant.html
@@ -615,9 +615,7 @@
                         </div>
                     </div>
                 </div>
-
-
-                <div class="about-form">
+                <div class="forms-wrap">
                     <div class="quick-navigation">
                         <form action="#" class="admission-form">
                             <h3 class="admission-form__header">QUICK NAVIGATION</h3>
@@ -640,16 +638,19 @@
                             </ul>
                         </form>
                     </div>
-                    <form action="#" class="admission-form">
-                        <h3 class="admission-form__header">COMPLETE THE FORM</h3>
-                        <p class="admission-form__subtitle">Fill out an online form to apply for Russian or Ukrainian
-                            universities</p>
-                        <input type="text" placeholder="First Name" class="admission-form__input">
-                        <input type="email" placeholder="Email" class="admission-form__input">
-                        <input type="tel" placeholder="Phone" class="admission-form__input">
-                        <input type="text" placeholder="Country" class="admission-form__input">
-                        <input type="submit" class="btn btn--submit admission-form__btn" value="Send">
-                    </form>
+                    <div class="about-form">
+                        <form action="#" class="admission-form">
+                            <h3 class="admission-form__header">COMPLETE THE FORM</h3>
+                            <p class="admission-form__subtitle">Fill out an online form to apply for Russian or
+                                Ukrainian
+                                universities</p>
+                            <input type="text" placeholder="First Name" class="admission-form__input">
+                            <input type="email" placeholder="Email" class="admission-form__input">
+                            <input type="tel" placeholder="Phone" class="admission-form__input">
+                            <input type="text" placeholder="Country" class="admission-form__input">
+                            <input type="submit" class="btn btn--submit admission-form__btn" value="Send">
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
