fix menu toggle

--- a/assistant.html
+++ b/assistant.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css//media.css">
     <link rel="stylesheet" href="./css/assistant.css">
+    <link rel="stylesheet" href="./css/assistans-media.css">
     <title>Document</title>
 </head>
 
@@ -322,7 +323,7 @@
 
 
 
-        <img src="./img//icons/arrow-decorate.svg" alt="" class="arrow-decorate">
+        <img src="./img//icons/arrow-decorate.svg" alt="" class="arrow-decorate arrow-decorate--left">
         <img src="./img//icons/arrow-decorate.svg" width="216" height="322" alt=""
             class="arrow-decorate arrow-decorate--right">
 
