--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                     <li class="social-links-item"><a href="#" class="social-links-link"><img class="social-links-icon"
                                 src="./img//icons/facebook blue.svg" alt=""></a></li>
                 </ul>
-                <div id="menu"><img src="./img/icons/menu.svg" alt="menu"></div>
+                <div id="menu" class="menu"><img src="./img/icons/menu.svg" alt="menu"></div>
                 <a href="#"
                     class="btn connection-info__btn connection-info__btn--red connection-info__btn--sticky">Apply
                     online</a>
