--- a/index.html
+++ b/index.html
@@ -461,6 +461,7 @@
         <div class="rectangle-decorate">
             <div class="rectangle-decorate__inner">
             </div>
+            <img src="./img//icons/arrow-decorate.svg" width="140" height="200" alt="" class="rectangle-decorate__arr">
         </div>
         <div class="container">
             <div class="header-slider__content">
