--- a/assistant.html
+++ b/assistant.html
@@ -320,13 +320,9 @@
             <div class="header-decorate__inner">
             </div>
         </div>
-
-
-
         <img src="./img//icons/arrow-decorate.svg" alt="" class="arrow-decorate arrow-decorate--left">
         <img src="./img//icons/arrow-decorate.svg" width="216" height="322" alt=""
             class="arrow-decorate arrow-decorate--right">
-
         <div class="container">
             <div class="connection-info">
                 <div class="connection-info__item">
@@ -611,8 +607,6 @@
                                 repellat at sequi, illo laboriosam a nesciunt ipsum perspiciatis corporis ipsa
                                 voluptates
                                 sint ut</p><br>
-
-
                         </div>
                     </div>
                 </div>
@@ -640,7 +634,7 @@
                         </form>
                     </div>
                     <div class="about-form">
-                        <form action="#" class="admission-form">
+                        <form action="#" class="admission-form js-admission-quick-block">
                             <h3 class="admission-form__header">COMPLETE THE FORM</h3>
                             <p class="admission-form__subtitle">Fill out an online form to apply for Russian or
                                 Ukrainian
