fixa adaptive nav menu

--- a/assistant.html
+++ b/assistant.html
@@ -880,7 +880,7 @@
                     </div>
                 </div>
                 <div class="commetns-form">
-                    <form action="#" class="admission-form">
+                    <form action="#" class="admission-form js-commetns-form">
                         <h3 class="admission-form__header">COMPLETE THE FORM</h3>
                         <p class="admission-form__subtitle">Fill out an online form to apply for Russian or Ukrainian
                             universities</p>
