--- a/index.html
+++ b/index.html
@@ -646,10 +646,14 @@
                 </div>
             </div>
             <div class="universities__mobile-navigations">
-                <button class="btn btn--university btn--top-universities-mobile">TOP UNIVERSITiES</button>
-                <button class="btn btn--university btn--universities-russia-mobile btn--posive ">RUSSIA </button>
                 <button
-                    class="btn btn--university btn--university-ukraine-mobile btn--posive js-ua-universes">UKRAINE</button>
+                    class="btn btn--university btn--top-universities-mobile btn-universities-nav btn--posive js-all-universes btn--university-active ">TOP
+                    UNIVERSITiES</button>
+                <button
+                    class="btn btn--university btn--universities-russia-mobile btn--posive btn-universities-nav js-rus-universes">RUSSIA
+                </button>
+                <button
+                    class="btn btn--university btn--university-ukraine-mobile btn--posive btn-universities-nav js-ua-universes">UKRAINE</button>
             </div>
         </div>
 
@@ -780,6 +784,174 @@
                     <a href="#" class="btn slider-item__btn">More Details</a>
                 </div>
             </div>
+            <div class="slider-item js-slider-item-universities">
+                <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
+                <div class="slider-item__content">
+                    <h4 class="slider-item__header">Saint-Petersburg State Agrarian University</h4>
+                    <div class="line line--slide-item">
+                        <span class="line-circle line-circle--slide-item"></span>
+                    </div>
+                    <p class="slider-item__info">
+                        gkdhvdvkhdk fvhscsdck jsckjs dkjcsd kjckjsd ckjsdbckjs bdkcskjdbckjs bckjs bckjskjc scndsncdv
+                        fdvfvdjhj hhhvhjvv hjvhjvh jvjhvjhvjhvjh vhjjhvjhvjhv jhvjhjhv jvjvjhvhj jhjhvjv jvjhvjhv jhvj
+                    </p>
+                    <a href="#" class="btn slider-item__btn">More Details</a>
+                </div>
+            </div>
+            <div class="slider-item js-slider-item-universities js-ua-universe">
+                <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
+                <div class="slider-item__content">
+                    <h4 class="slider-item__header">Saint-Petersburg State Agrarian University</h4>
+                    <div class="line line--slide-item">
+                        <span class="line-circle line-circle--slide-item"></span>
+                    </div>
+                    <p class="slider-item__info">
+                        gkdhvdvkhdk fvhscsdck jsckjs dkjcsd kjckjsd ckjsdbckjs bdkcskjdbckjs bckjs bckjskjc scndsncdv
+                        fdvfvdjhj hhhvhjvv hjvhjvh jvjhvjhvjhvjh vhjjhvjhvjhv jhvjhjhv jvjvjhvhj jhjhvjv jvjhvjhv jhvj
+                    </p>
+                    <a href="#" class="btn slider-item__btn">More Details</a>
+                </div>
+            </div>
+            <div class="slider-item js-slider-item-universities js-ua-universe">
+                <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
+                <div class="slider-item__content">
+                    <h4 class="slider-item__header">Saint-Petersburg State Agrarian University</h4>
+                    <div class="line line--slide-item">
+                        <span class="line-circle line-circle--slide-item"></span>
+                    </div>
+                    <p class="slider-item__info">
+                        gkdhvdvkhdk fvhscsdck jsckjs dkjcsd kjckjsd ckjsdbckjs bdkcskjdbckjs bckjs bckjskjc scndsncdv
+                        fdvfvdjhj hhhvhjvv hjvhjvh jvjhvjhvjhvjh vhjjhvjhvjhv jhvjhjhv jvjvjhvhj jhjhvjv jvjhvjhv jhvj
+                    </p>
+                    <a href="#" class="btn slider-item__btn">More Details</a>
+                </div>
+            </div>
+            <div class="slider-item js-slider-item-universities js-ua-universe">
+                <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
+                <div class="slider-item__content">
+                    <h4 class="slider-item__header">Saint-Petersburg State Agrarian University</h4>
+                    <div class="line line--slide-item">
+                        <span class="line-circle line-circle--slide-item"></span>
+                    </div>
+                    <p class="slider-item__info">
+                        gkdhvdvkhdk fvhscsdck jsckjs dkjcsd kjckjsd ckjsdbckjs bdkcskjdbckjs bckjs bckjskjc scndsncdv
+                        fdvfvdjhj hhhvhjvv hjvhjvh jvjhvjhvjhvjh vhjjhvjhvjhv jhvjhjhv jvjvjhvhj jhjhvjv jvjhvjhv jhvj
+                    </p>
+                    <a href="#" class="btn slider-item__btn">More Details</a>
+                </div>
+            </div>
+            <div class="slider-item js-slider-item-universities js-ua-universe">
+                <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
+                <div class="slider-item__content">
+                    <h4 class="slider-item__header">Saint-Petersburg State Agrarian University</h4>
+                    <div class="line line--slide-item">
+                        <span class="line-circle line-circle--slide-item"></span>
+                    </div>
+                    <p class="slider-item__info">
+                        gkdhvdvkhdk fvhscsdck jsckjs dkjcsd kjckjsd ckjsdbckjs bdkcskjdbckjs bckjs bckjskjc scndsncdv
+                        fdvfvdjhj hhhvhjvv hjvhjvh jvjhvjhvjhvjh vhjjhvjhvjhv jhvjhjhv jvjvjhvhj jhjhvjv jvjhvjhv jhvj
+                    </p>
+                    <a href="#" class="btn slider-item__btn">More Details</a>
+                </div>
+            </div>
+            <div class="slider-item js-slider-item-universities js-ua-universe">
+                <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
+                <div class="slider-item__content">
+                    <h4 class="slider-item__header">Saint-Petersburg State Agrarian University</h4>
+                    <div class="line line--slide-item">
+                        <span class="line-circle line-circle--slide-item"></span>
+                    </div>
+                    <p class="slider-item__info">
+                        gkdhvdvkhdk fvhscsdck jsckjs dkjcsd kjckjsd ckjsdbckjs bdkcskjdbckjs bckjs bckjskjc scndsncdv
+                        fdvfvdjhj hhhvhjvv hjvhjvh jvjhvjhvjhvjh vhjjhvjhvjhv jhvjhjhv jvjvjhvhj jhjhvjv jvjhvjhv jhvj
+                    </p>
+                    <a href="#" class="btn slider-item__btn">More Details</a>
+                </div>
+            </div>
+            <div class="slider-item js-slider-item-universities js-rus-universe">
+                <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
+                <div class="slider-item__content">
+                    <h4 class="slider-item__header">Saint-Petersburg State Agrarian University</h4>
+                    <div class="line line--slide-item">
+                        <span class="line-circle line-circle--slide-item"></span>
+                    </div>
+                    <p class="slider-item__info">
+                        gkdhvdvkhdk fvhscsdck jsckjs dkjcsd kjckjsd ckjsdbckjs bdkcskjdbckjs bckjs bckjskjc scndsncdv
+                        fdvfvdjhj hhhvhjvv hjvhjvh jvjhvjhvjhvjh vhjjhvjhvjhv jhvjhjhv jvjvjhvhj jhjhvjv jvjhvjhv jhvj
+                    </p>
+                    <a href="#" class="btn slider-item__btn">More Details</a>
+                </div>
+            </div>
+            <div class="slider-item js-slider-item-universities js-rus-universe">
+                <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
+                <div class="slider-item__content">
+                    <h4 class="slider-item__header">Saint-Petersburg State Agrarian University</h4>
+                    <div class="line line--slide-item">
+                        <span class="line-circle line-circle--slide-item"></span>
+                    </div>
+                    <p class="slider-item__info">
+                        gkdhvdvkhdk fvhscsdck jsckjs dkjcsd kjckjsd ckjsdbckjs bdkcskjdbckjs bckjs bckjskjc scndsncdv
+                        fdvfvdjhj hhhvhjvv hjvhjvh jvjhvjhvjhvjh vhjjhvjhvjhv jhvjhjhv jvjvjhvhj jhjhvjv jvjhvjhv jhvj
+                    </p>
+                    <a href="#" class="btn slider-item__btn">More Details</a>
+                </div>
+            </div>
+            <div class="slider-item js-slider-item-universities js-rus-universe">
+                <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
+                <div class="slider-item__content">
+                    <h4 class="slider-item__header">Saint-Petersburg State Agrarian University</h4>
+                    <div class="line line--slide-item">
+                        <span class="line-circle line-circle--slide-item"></span>
+                    </div>
+                    <p class="slider-item__info">
+                        gkdhvdvkhdk fvhscsdck jsckjs dkjcsd kjckjsd ckjsdbckjs bdkcskjdbckjs bckjs bckjskjc scndsncdv
+                        fdvfvdjhj hhhvhjvv hjvhjvh jvjhvjhvjhvjh vhjjhvjhvjhv jhvjhjhv jvjvjhvhj jhjhvjv jvjhvjhv jhvj
+                    </p>
+                    <a href="#" class="btn slider-item__btn">More Details</a>
+                </div>
+            </div>
+            <div class="slider-item js-slider-item-universities js-rus-universe">
+                <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
+                <div class="slider-item__content">
+                    <h4 class="slider-item__header">Saint-Petersburg State Agrarian University</h4>
+                    <div class="line line--slide-item">
+                        <span class="line-circle line-circle--slide-item"></span>
+                    </div>
+                    <p class="slider-item__info">
+                        gkdhvdvkhdk fvhscsdck jsckjs dkjcsd kjckjsd ckjsdbckjs bdkcskjdbckjs bckjs bckjskjc scndsncdv
+                        fdvfvdjhj hhhvhjvv hjvhjvh jvjhvjhvjhvjh vhjjhvjhvjhv jhvjhjhv jvjvjhvhj jhjhvjv jvjhvjhv jhvj
+                    </p>
+                    <a href="#" class="btn slider-item__btn">More Details</a>
+                </div>
+            </div>
+            <div class="slider-item js-slider-item-universities js-rus-universe">
+                <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
+                <div class="slider-item__content">
+                    <h4 class="slider-item__header">Saint-Petersburg State Agrarian University</h4>
+                    <div class="line line--slide-item">
+                        <span class="line-circle line-circle--slide-item"></span>
+                    </div>
+                    <p class="slider-item__info">
+                        gkdhvdvkhdk fvhscsdck jsckjs dkjcsd kjckjsd ckjsdbckjs bdkcskjdbckjs bckjs bckjskjc scndsncdv
+                        fdvfvdjhj hhhvhjvv hjvhjvh jvjhvjhvjhvjh vhjjhvjhvjhv jhvjhjhv jvjvjhvhj jhjhvjv jvjhvjhv jhvj
+                    </p>
+                    <a href="#" class="btn slider-item__btn">More Details</a>
+                </div>
+            </div>
+            <div class="slider-item js-slider-item-universities js-ua-universe">
+                <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
+                <div class="slider-item__content">
+                    <h4 class="slider-item__header">Saint-Petersburg State Agrarian University</h4>
+                    <div class="line line--slide-item">
+                        <span class="line-circle line-circle--slide-item"></span>
+                    </div>
+                    <p class="slider-item__info">
+                        gkdhvdvkhdk fvhscsdck jsckjs dkjcsd kjckjsd ckjsdbckjs bdkcskjdbckjs bckjs bckjskjc scndsncdv
+                        fdvfvdjhj hhhvhjvv hjvhjvh jvjhvjhvjhvjh vhjjhvjhvjhv jhvjhjhv jvjvjhvhj jhjhvjv jvjhvjhv jhvj
+                    </p>
+                    <a href="#" class="btn slider-item__btn">More Details</a>
+                </div>
+            </div>
         </div>
         <div class="container">
             <div class="slider-nav">
@@ -799,13 +971,13 @@
             </div>
             <div class="universities-navigations">
                 <button
-                    class="btn btn--university btn--university-top-universities btn--posive js-all-universes btn--university-active">TOP
+                    class="btn btn--university btn--university-top-universities btn--posive btn-universities-nav js-all-universes btn--university-active">TOP
                     UNIVERSITiES</button>
                 <button
-                    class="btn btn--university btn--university-universities-russia btn--posive js-rus-universes">RUSSIA
+                    class="btn btn--university btn--university-universities-russia btn--posive btn-universities-nav js-rus-universes">RUSSIA
                 </button>
                 <button
-                    class="btn btn--university btn--university-universities-ukraine btn--posive js-ua-universes">UKRAINE</button>
+                    class="btn btn--university btn--university-universities-ukraine btn--posive btn-universities-nav js-ua-universes">UKRAINE</button>
                 <button class="btn btn--university btn--university-universities-more btn--posive">LEARN MORE</button>
             </div>
         </div>
