fix header fixed

--- a/assistant.html
+++ b/assistant.html
@@ -879,18 +879,21 @@
                         </div>
                     </div>
                 </div>
-                <div class="commetns-form">
-                    <form action="#" class="admission-form js-commetns-form">
-                        <h3 class="admission-form__header">COMPLETE THE FORM</h3>
-                        <p class="admission-form__subtitle">Fill out an online form to apply for Russian or Ukrainian
-                            universities</p>
-                        <input type="text" placeholder="First Name" class="admission-form__input">
-                        <input type="email" placeholder="Email" class="admission-form__input">
-                        <input type="tel" placeholder="Phone" class="admission-form__input">
-                        <input type="text" placeholder="Country" class="admission-form__input">
-                        <input type="submit" class="btn btn--submit admission-form__btn" value="Send">
-                    </form>
-                </div>
+                <!-- <div class="commetns-form">
+                    <div class="commetns-form__wrap">
+                        <form action="#" class="admission-form js-commetns-form">
+                            <h3 class="admission-form__header">COMPLETE THE FORM</h3>
+                            <p class="admission-form__subtitle">Fill out an online form to apply for Russian or
+                                Ukrainian
+                                universities</p>
+                            <input type="text" placeholder="First Name" class="admission-form__input">
+                            <input type="email" placeholder="Email" class="admission-form__input">
+                            <input type="tel" placeholder="Phone" class="admission-form__input">
+                            <input type="text" placeholder="Country" class="admission-form__input">
+                            <input type="submit" class="btn btn--submit admission-form__btn" value="Send">
+                        </form>
+                    </div>
+                </div> -->
             </div>
         </div>
         </div>
