add rus ua sliders

--- a/index.html
+++ b/index.html
@@ -468,7 +468,8 @@
                 <div class="connection-info">
                     <div class="connection-info__item">
                         <div class="navigation-item navigation-item--phones">
-                            <img src="./img/icons/phone icon.svg" class="navigation-item__icon" alt="phone">
+                            <img src="./img/icons/phone icon.svg"
+                                class="navigation-item__icon navigation-item__icon--header-slider" alt="phone">
                             <div class="navigation-item__inner">
                                 <a href="tel:+380637909294"
                                     class="navigation-item__link navigation-item__link--uk-num">+38 (063) 790-92-94</a>
@@ -477,7 +478,8 @@
                             </div>
                         </div>
                         <div class="navigation-item navigation-item--email">
-                            <img src="./img/icons/mail icon.svg" alt="mail" class="navigation-item__icon">
+                            <img src="./img/icons/mail icon.svg" alt="mail"
+                                class="navigation-item__icon navigation-item__icon--header-slider">
                             <a class="navigation-item__link"
                                 href="mailto:admissions@edugainoverseas.com">admissions@edugainoverseas.com</a>
                         </div>
@@ -686,7 +688,7 @@
                     <a href="#" class="btn slider-item__btn">More Details</a>
                 </div>
             </div>
-            <div class="slider-item js-slider-item-universities">
+            <div class="slider-item js-slider-item-universities js-rus-universe">
                 <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
                 <div class="slider-item__content">
                     <h4 class="slider-item__header">Saint-Petersburg State Agrarian University</h4>
@@ -700,7 +702,7 @@
                     <a href="#" class="btn slider-item__btn">More Details</a>
                 </div>
             </div>
-            <div class="slider-item js-slider-item-universities ">
+            <div class="slider-item js-slider-item-universities js-rus-universe">
                 <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
                 <div class="slider-item__content">
                     <h4 class="slider-item__header">Saint-Petersburg State Agrarian University</h4>
@@ -714,7 +716,7 @@
                     <a href="#" class="btn slider-item__btn">More Details</a>
                 </div>
             </div>
-            <div class="slider-item js-slider-item-universities ">
+            <div class="slider-item js-slider-item-universities js-rus-universe">
                 <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
                 <div class="slider-item__content">
                     <h4 class="slider-item__header">Saint-Petersburg State Agrarian University</h4>
@@ -728,7 +730,7 @@
                     <a href="#" class="btn slider-item__btn">More Details</a>
                 </div>
             </div>
-            <div class="slider-item js-slider-item-universities">
+            <div class="slider-item js-slider-item-universities js-rus-universe">
                 <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
                 <div class="slider-item__content">
                     <h4 class="slider-item__header">Saint-Petersburg State Agrarian University</h4>
@@ -742,7 +744,7 @@
                     <a href="#" class="btn slider-item__btn">More Details</a>
                 </div>
             </div>
-            <div class="slider-item js-slider-item-universities">
+            <div class="slider-item js-slider-item-universities js-rus-universe">
                 <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
                 <div class="slider-item__content">
                     <h4 class="slider-item__header">Saint-Petersburg State Agrarian University</h4>
@@ -756,7 +758,7 @@
                     <a href="#" class="btn slider-item__btn">More Details</a>
                 </div>
             </div>
-            <div class="slider-item js-slider-item-universities">
+            <div class="slider-item js-slider-item-universities js-ua-universe">
                 <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
                 <div class="slider-item__content">
                     <h4 class="slider-item__header">Saint-Petersburg State Agrarian University</h4>
@@ -770,7 +772,7 @@
                     <a href="#" class="btn slider-item__btn">More Details</a>
                 </div>
             </div>
-            <div class="slider-item js-slider-item-universities">
+            <div class="slider-item js-slider-item-universities js-ua-universe">
                 <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
                 <div class="slider-item__content">
                     <h4 class="slider-item__header">Saint-Petersburg State Agrarian University</h4>
@@ -784,7 +786,7 @@
                     <a href="#" class="btn slider-item__btn">More Details</a>
                 </div>
             </div>
-            <div class="slider-item js-slider-item-universities">
+            <div class="slider-item js-slider-item-universities js-ua-universe">
                 <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
                 <div class="slider-item__content">
                     <h4 class="slider-item__header">Saint-Petersburg State Agrarian University</h4>
