--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 </div>
             </div>
             <div class="adaptive-menu__social-wrap">
-                <img src="./img/icons/logo footer.svg" alt="">
+                <img src="./img/icons/mobile-menu-logo.svg" alt="education">
                 <ul class="social-links-list social-links-list--menu">
                     <li class="social-links-item"><a href="#" class="social-links-link social-links-list--menu"><img
                                 class="social-links-icon" src="./img/icons/whatsapp white.svg" alt=""></a></li>
