adaptive feedback slider

--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
                     <h4 class="header-slider__assistant-subtitle">Courses</h4>
                     <div class="subtitle-wrap">
                         <img src="./img/photo/dots.svg" alt="" class="dots-img">
-                        <h2 class="header-slider__subtitle">Stady in Ukraine
+                        <h2 class="header-slider__subtitle">Study in Ukraine
                             <p class="header-subtitle-decorate">and Russia</p>
                         </h2>
                     </div>
@@ -980,7 +980,8 @@
                 </button>
                 <button
                     class="btn btn--university btn--university-universities-ukraine btn--posive btn-universities-nav js-ua-universes">UKRAINE</button>
-                <button class="btn btn--university btn--university-universities-more btn--posive">LEARN MORE</button>
+                <button class="btn btn--university btn--university-universities-more btn--posive btn--slider-link">LEARN
+                    MORE</button>
             </div>
         </div>
     </section>
@@ -1208,7 +1209,8 @@
                 </div>
             </div>
             <div class="universities-navigations">
-                <button class="btn btn--university btn--posive btn--university-universities-more">LEARN MORE</button>
+                <button class="btn btn--university btn--posive btn--university-universities-more btn--slider-link">LEARN
+                    MORE</button>
             </div>
         </div>
     </section>
@@ -1309,6 +1311,7 @@
             <img src="./img/photo/gallery-slider-3.png" alt="slider" class="gallery-slider-item js-slider-item-gallery">
             <img src="./img/photo/gallery-slider-4.png" alt="slider" class="gallery-slider-item js-slider-item-gallery">
         </div>
+        <a href="#" class="btn btn--posive gallery-slider__btn btn--slider-link">lean more</a>
         <div class="container">
             <div class="slider-nav">
                 <div class="slider-line">
