--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
             </div>
     </header>
     <section class="header-slider">
-        <img src="./img//icons/arrow-decorate.svg" alt="" class="arrow-decorate">
+        <img src="./img//icons/arrow-decorate.svg" alt="" class="arrow-decorate arrow-decorate--left">
         <img src="./img//icons/arrow-decorate.svg" width="216" height="322" alt=""
             class="arrow-decorate arrow-decorate--right">
 
@@ -1216,7 +1216,7 @@
                 <h1 class="academic-header__title">admissionS</h1>
                 <div class="academic">
                     <!-- поменять год -->
-                    <span class="academic__years">2020-2021</span>
+                    <span class="academic__years">2020 - 2021</span>
                     <!---->
                     <h5 class="academic__title">
                         are open!
@@ -1465,9 +1465,9 @@
             <h3 class="form-title">Or fill in the form</h3>
             <form action="" class="footer-form">
                 <input type="text" placeholder="First Name" class="footer-form__input footer-form__input--name">
-                <input type="text" placeholder="Country" class="footer-form__input footer-form__input--country">
-                <input type="text" placeholder="Phone Number" class="footer-form__input footer-form__input--phone">
                 <input type="email" placeholder="Email Adress" class="footer-form__input footer-form__input--email">
+                <input type="text" placeholder="Phone Number" class="footer-form__input footer-form__input--phone">
+                <input type="text" placeholder="Country" class="footer-form__input footer-form__input--country">
                 <input type="submit" class="footer-form__btn" value="Request Info">
             </form>
             <div class="footer-items">
@@ -1490,12 +1490,7 @@
                         <li><a class="footer-item__subtitle" href="#">How to obtain visa</a></li>
                         <li><a class="footer-item__subtitle" href="#">Apply online</a></li>
                     </ul>
-                    <!-- <h3 class="footer-item__title">Quick Navigation</h3>
-                    <h4 class="footer-item__subtitle">Courses</h4>
-                    <h4 class="footer-item__subtitle">Universities</h4>
-                    <h4 class="footer-item__subtitle">Admission process</h4>
-                    <h4 class="footer-item__subtitle">How to obtain visa</h4>
-                    <h4 class="footer-item__subtitle">Apply online</h4> -->
+
                 </div>
                 <div class="footer-item footer-item--contact">
                     <h3 class="footer-item__title">Contact us</h3>
