--- a/index.html
+++ b/index.html
@@ -79,6 +79,30 @@
             </div>
         </div>
         </div>
+        <div class="header-info">
+            <div class="container">
+                <div class="header-info__wrap">
+                    <ul class="header-info__phones">
+                        <li class="header-info__phone-item"><img src="" alt=""><a href=":tel">+38 (063) 790-92-94
+                            </a></li>
+                        <li class="header-info__phone-item"><img src="" alt=""><a href=":tel"> +7(909) 207-76-88
+                            </a></li>
+                    </ul>
+                    <ul class="social-links-list">
+                        <li class="social-links-item"><a href="#" class="social-links-link"><img
+                                    class="social-links-icon" src="./img//icons/whatsapp blue.svg" alt=""></a></li>
+                        <li class="social-links-item"><a href="#" class="social-links-link"><img
+                                    class="social-links-icon" src="./img//icons/instagram-sketched blue.svg" alt=""></a>
+                        </li>
+                        <li class="social-links-item"><a href="#" class="social-links-link"><img
+                                    class="social-links-icon" src="./img//icons/linkedin blue.svg" alt=""></a></li>
+                        <li class="social-links-item"><a href="#" class="social-links-link"><img
+                                    class="social-links-icon" src="./img//icons/facebook blue.svg" alt=""></a></li>
+                    </ul>
+                </div>
+
+            </div>
+        </div>
         <div class="container">
             <div class="header-wrap">
                 <div class="logo logo--header">
