--- a/assistant.html
+++ b/assistant.html
@@ -748,7 +748,7 @@
         <img src="./img/icons/dots-decorate--reg.svg" alt="" class="dots-decorate dots-decorate-red-right">
         <img src="./img//icons/arr-decorate-grey.svg" alt="" class="arrow-decorate-greey">
 
-        <div class="container">
+        <!-- <div class="container">
             <div class="comments__wrap">
                 <div class="comments">
                     <div class="title-block">
@@ -879,7 +879,7 @@
                         </div>
                     </div>
                 </div>
-                <!-- <div class="commetns-form">
+                <div class="commetns-form">
                     <div class="commetns-form__wrap">
                         <form action="#" class="admission-form js-commetns-form">
                             <h3 class="admission-form__header">COMPLETE THE FORM</h3>
@@ -893,10 +893,277 @@
                             <input type="submit" class="btn btn--submit admission-form__btn" value="Send">
                         </form>
                     </div>
-                </div> -->
+                </div>
+            </div>
+        </div> -->
+        <div class="container">
+            <div class="about-content">
+                <div class="about">
+                    <div class="title-block">
+                        <h3 class="title-block__header">
+                            About Edugain Overseas
+                        </h3>
+                        <div class="line">
+                            <span class="line-circle"></span>
+                        </div>
+                    </div>
+                    <div class="about__wrap">
+                        <div class="about-text">
+                            <p class="paragraph">
+                                <span class="decor-text-blue">Edugain Overseas</span>
+                                provides services to foreign students and makes education abroad accessible and easy to
+                                them.</p><br><br>
+                            <p class="paragraph">
+                                <span class="decor-text-blue">Edugain Overseas</span>
+                                specializes in full assistance to ambitious foreign students who want to study in
+                                Ukraine
+                                and
+                                Russia.
+                            </p>
+                            <p class="paragraph">
+                                We understand basic needs and requirements of students and help them choose the right
+                                course
+                                and
+                                university either in Russia or Ukraine. Our professional attitude, commitment and highly
+                                experienced team are doing our best so all your needs are satisfied.</p><br><br>
+                            <h3 class="about-header">
+                                WE HELP STUDENTS NOT ONLY DURING ADMISSION AND OBTAINING VISA PERIODS, BUT WE ASSIST
+                                STUDENTS
+                                DURING THEIR WHOLE PERIOD OF STUDY.
+                            </h3>
+                            <p class="paragraph">
+                                Studying in Ukraine and Russia is an exciting opportunity for every foreign
+                                student!</p><br><br>
+                            <p class="paragraph">
+                                These two countries are the best platforms for higher education among
+                                Eastern/Central European countries and in the whole world in general. These countries
+                                are
+                                among
+                                top five countries of the world with the highest number of foreign students. Higher
+                                education is
+                                considered to be one of the main human values there.</p><br><br>
+                            <p class="paragraph">
+                                Harum molestiae dicta, provident, velit similique cumque, ut quod impedit labore
+                                suscipit
+                                praesentium. Doloribus corporis asperiores quas aspernatur beatae consectetur totam
+                                deleniti
+                                labore
+                            </p>
+                            <br>
+                            <p class="paragraph">
+                                placeat. Quisquam dolor obcaecati doloremque perspiciatis laborum?
+                                Commodi quo quas accusamus vel doloribus neque animi sit sunt odit! Corrupti excepturi
+                                voluptate
+                            </p>
+                            <br>
+                            <p class="paragraph">
+                                repellat at sequi, illo laboriosam a nesciunt ipsum perspiciatis corporis ipsa
+                                voluptates
+                                sint ut</p><br>
+                            <p class="paragraph">
+                                placeat. Quisquam dolor obcaecati doloremque perspiciatis laborum?
+                                Commodi quo quas accusamus vel doloribus neque animi sit sunt odit! Corrupti excepturi
+                                voluptate
+                            </p>
+                            <br>
+                            <p class="paragraph">
+                                repellat at sequi, illo laboriosam a nesciunt ipsum perspiciatis corporis ipsa
+                                voluptates
+                                sint ut</p><br>
+
+                            <p class="paragraph">
+                                placeat. Quisquam dolor obcaecati doloremque perspiciatis laborum?
+                                Commodi quo quas accusamus vel doloribus neque animi sit sunt odit! Corrupti excepturi
+                                voluptate
+                            </p>
+                            <br>
+                            <p class="paragraph">
+                                repellat at sequi, illo laboriosam a nesciunt ipsum perspiciatis corporis ipsa
+                                voluptates
+                                sint ut</p><br>
+                            <p class="paragraph">
+                                placeat. Quisquam dolor obcaecati doloremque perspiciatis laborum?
+                                Commodi quo quas accusamus vel doloribus neque animi sit sunt odit! Corrupti excepturi
+                                voluptate
+                            </p>
+                            <br>
+                            <p class="paragraph">
+                                repellat at sequi, illo laboriosam a nesciunt ipsum perspiciatis corporis ipsa
+                                voluptates
+                                sint ut</p><br>
+                            <p class="paragraph">
+                                placeat. Quisquam dolor obcaecati doloremque perspiciatis laborum?
+                                Commodi quo quas accusamus vel doloribus neque animi sit sunt odit! Corrupti excepturi
+                                voluptate
+                            </p>
+                            <br>
+                            <p class="paragraph">
+                                repellat at sequi, illo laboriosam a nesciunt ipsum perspiciatis corporis ipsa
+                                voluptates
+                                sint ut</p><br>
+                            <p class="paragraph">
+                                placeat. Quisquam dolor obcaecati doloremque perspiciatis laborum?
+                                Commodi quo quas accusamus vel doloribus neque animi sit sunt odit! Corrupti excepturi
+                                voluptate
+                            </p>
+                            <br>
+                            <p class="paragraph">
+                                repellat at sequi, illo laboriosam a nesciunt ipsum perspiciatis corporis ipsa
+                                voluptates
+                                sint ut</p><br>
+                            <p class="paragraph">
+                                placeat. Quisquam dolor obcaecati doloremque perspiciatis laborum?
+                                Commodi quo quas accusamus vel doloribus neque animi sit sunt odit! Corrupti excepturi
+                                voluptate
+                            </p>
+                            <br>
+                            <p class="paragraph">
+                                repellat at sequi, illo laboriosam a nesciunt ipsum perspiciatis corporis ipsa
+                                voluptates
+                                sint ut</p><br>
+                            <p class="paragraph">
+                                placeat. Quisquam dolor obcaecati doloremque perspiciatis laborum?
+                                Commodi quo quas accusamus vel doloribus neque animi sit sunt odit! Corrupti excepturi
+                                voluptate
+                            </p>
+                            <br>
+                            <p class="paragraph">
+                                repellat at sequi, illo laboriosam a nesciunt ipsum perspiciatis corporis ipsa
+                                voluptates
+                                sint ut</p><br>
+                            <p class="paragraph">
+                                placeat. Quisquam dolor obcaecati doloremque perspiciatis laborum?
+                                Commodi quo quas accusamus vel doloribus neque animi sit sunt odit! Corrupti excepturi
+                                voluptate
+                            </p>
+                            <br>
+                            <p class="paragraph">
+                                repellat at sequi, illo laboriosam a nesciunt ipsum perspiciatis corporis ipsa
+                                voluptates
+                                sint ut</p><br>
+                            <p class="paragraph">
+                                placeat. Quisquam dolor obcaecati doloremque perspiciatis laborum?
+                                Commodi quo quas accusamus vel doloribus neque animi sit sunt odit! Corrupti excepturi
+                                voluptate
+                            </p>
+                            <br>
+                            <p class="paragraph">
+                                repellat at sequi, illo laboriosam a nesciunt ipsum perspiciatis corporis ipsa
+                                voluptates
+                                sint ut</p><br>
+                            <p class="paragraph">
+                                placeat. Quisquam dolor obcaecati doloremque perspiciatis laborum?
+                                Commodi quo quas accusamus vel doloribus neque animi sit sunt odit! Corrupti excepturi
+                                voluptate
+                            </p>
+                            <br>
+                            <p class="paragraph">
+                                repellat at sequi, illo laboriosam a nesciunt ipsum perspiciatis corporis ipsa
+                                voluptates
+                                sint ut</p><br>
+                            <p class="paragraph">
+                                placeat. Quisquam dolor obcaecati doloremque perspiciatis laborum?
+                                Commodi quo quas accusamus vel doloribus neque animi sit sunt odit! Corrupti excepturi
+                                voluptate
+                            </p>
+                            <br>
+                            <p class="paragraph">
+                                repellat at sequi, illo laboriosam a nesciunt ipsum perspiciatis corporis ipsa
+                                voluptates
+                                sint ut</p><br>
+                            <p class="paragraph">
+                                placeat. Quisquam dolor obcaecati doloremque perspiciatis laborum?
+                                Commodi quo quas accusamus vel doloribus neque animi sit sunt odit! Corrupti excepturi
+                                voluptate
+                            </p>
+                            <br>
+                            <p class="paragraph">
+                                repellat at sequi, illo laboriosam a nesciunt ipsum perspiciatis corporis ipsa
+                                voluptates
+                                sint ut</p><br>
+                            <p class="paragraph">
+                                placeat. Quisquam dolor obcaecati doloremque perspiciatis laborum?
+                                Commodi quo quas accusamus vel doloribus neque animi sit sunt odit! Corrupti excepturi
+                                voluptate
+                            </p>
+                            <br>
+                            <p class="paragraph">
+                                repellat at sequi, illo laboriosam a nesciunt ipsum perspiciatis corporis ipsa
+                                voluptates
+                                sint ut</p><br>
+                            <p class="paragraph">
+                                placeat. Quisquam dolor obcaecati doloremque perspiciatis laborum?
+                                Commodi quo quas accusamus vel doloribus neque animi sit sunt odit! Corrupti excepturi
+                                voluptate
+                            </p>
+                            <br>
+                            <p class="paragraph">
+                                repellat at sequi, illo laboriosam a nesciunt ipsum perspiciatis corporis ipsa
+                                voluptates
+                                sint ut</p><br>
+                            <p class="paragraph">
+                                placeat. Quisquam dolor obcaecati doloremque perspiciatis laborum?
+                                Commodi quo quas accusamus vel doloribus neque animi sit sunt odit! Corrupti excepturi
+                                voluptate
+                            </p>
+                            <br>
+                            <p class="paragraph">
+                                repellat at sequi, illo laboriosam a nesciunt ipsum perspiciatis corporis ipsa
+                                voluptates
+                                sint ut</p><br>
+                            <p class="paragraph">
+                                placeat. Quisquam dolor obcaecati doloremque perspiciatis laborum?
+                                Commodi quo quas accusamus vel doloribus neque animi sit sunt odit! Corrupti excepturi
+                                voluptate
+                            </p>
+                            <br>
+                            <p class="paragraph">
+                                repellat at sequi, illo laboriosam a nesciunt ipsum perspiciatis corporis ipsa
+                                voluptates
+                                sint ut</p><br>
+                        </div>
+                    </div>
+                </div>
+                <div class="forms-wrap">
+                    <div class="quick-navigation1">
+                        <form action="#" class="admission-form">
+                            <h3 class="admission-form__header">QUICK NAVIGATION</h3>
+                            <p class="admission-form__subtitle">Fill out an online form to apply for Russian or
+                                Ukrainian
+                                universities</p>
+                            <ul class="admission-form__list">
+                                <li class="admission-form__item"><a class="admission-form__link" href="#">Admission
+                                        proccess</a></li>
+                                <li class="admission-form__item"><a class="admission-form__link" href="#">Application
+                                        form</a></li>
+                                <li class="admission-form__item"><a class="admission-form__link" href="#">Admission
+                                        requirements</a></li>
+                                <li class="admission-form__item"><a class="admission-form__link" href="#">Russia Fee
+                                        details</a></li>
+                                <li class="admission-form__item"><a class="admission-form__link" href="#">Ukraine Fee
+                                        details</a></li>
+                                <li class="admission-form__item"><a class="admission-form__link" href="#">How to obtain
+                                        visa</a></li>
+                            </ul>
+                        </form>
+                    </div>
+                    <div class="comment-form">
+                        <form action="#" class="admission-form js-admission-quick-block">
+                            <h3 class="admission-form__header">COMPLETE THE FORM</h3>
+                            <p class="admission-form__subtitle">Fill out an online form to apply for Russian or
+                                Ukrainian
+                                universities</p>
+                            <input type="text" placeholder="First Name" class="admission-form__input">
+                            <input type="email" placeholder="Email" class="admission-form__input">
+                            <input type="tel" placeholder="Phone" class="admission-form__input">
+                            <input type="text" placeholder="Country" class="admission-form__input">
+                            <input type="submit" class="btn btn--submit admission-form__btn" value="Send">
+                        </form>
+                    </div>
+                </div>
             </div>
         </div>
-        </div>
+
     </section>
     <footer class="footer">
         <div class="footer-decarate"></div>
