edit header stiky

--- a/index.html
+++ b/index.html
@@ -109,6 +109,28 @@
                     <a href="#"><img src="./img/icons/logo.svg" alt="logo"></a>
                 </div>
                 <nav class="header__nav">
+
+                    <div class="header__nav-sticky">
+                        <div class="navigation-item navigation-item--header--sticky">
+                            <img src="./img/icons/phone icon-blue.svg" class="navigation-item__icon" alt="phone"
+                                width="20" height="20">
+
+                            <a href="tel:+380637909294" class="navigation-item__link">+38 (063) 790-92-94</a>
+
+                        </div>
+                        <div class="navigation-item navigation-item--header--sticky">
+                            <img src="./img/icons/phone icon-blue.svg" class="navigation-item__icon" width="20"
+                                height="20" alt="phone">
+                            <a href="tel:+79092077688" class="navigation-item__link">+7 (909) 207-76-88</a>
+                        </div>
+
+                        <div class="navigation-item navigation-item--header--sticky">
+                            <img src="./img/icons/icon_email-blue.svg" alt="mail" class="navigation-item__icon"
+                                width="16" height="16">
+                            <a class="navigation-item__link"
+                                href="mailto:admissions@edugainoverseas.com">admissions@edugainoverseas.com</a>
+                        </div>
+                    </div>
                     <ul class="header__list">
                         <li class="header__item"><a href="#" class="header__link">HOME</a>
                             <div class="hover-items">
